<?xml version="1.0" encoding="utf-8"?>
<!--
/* //device/apps/Preferences/assets/res/any/layout/sync_screen.xml
**
** Copyright 2006, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView android:id="@+id/account"
        style="@style/info_value"
        android:maxLines="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sync_screen_account_text" />

    <CheckBox android:id="@+id/listenForTickles"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sync_screen_listenForTickles_text" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/info_label"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync_status_label" />

        <TextView android:id="@+id/status"
            style="@style/info_value"
            android:maxLines="3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sync_screen_status_text" />
    </LinearLayout>

    <TextView android:id="@+id/moreStatus"
        sytle="@style/info_value"
        android:maxLines="3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sync_screen_moreStatus_text" />

    <Spinner android:id="@+id/contentName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <requestFocus/>
    </Spinner>

    <Button android:id="@+id/sync"
            android:layout_marginTop="8dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sync_screen_sync_text" />

    <CheckBox android:id="@+id/syncProviderOnTickle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button android:id="@+id/advanced"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/sync_screen_advanced_text"/>

    <LinearLayout android:id="@+id/advancedSection"
                  android:layout_marginTop="8dip"
		  android:orientation="vertical"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content">
        <Button android:id="@+id/history"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/sync_screen_history_text"/>
    </LinearLayout>

</LinearLayout>
</ScrollView>
